--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,3 +1,3 @@
 <header>
-  <%= button_to "Add User", new_company_user_path(@company) %>
+  <%= button_to "Add User", new_company_user_path(@company), method: :get %>
 </header>
