Add submit button to new user form

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,5 +10,6 @@
     <%= form.text_field :email %>
     <%= form.label "Password" %>
     <%= form.text_field :password %>
+    <%= form.submit "Add User" %>
   <% end %>
 </div>
