--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,3 @@
-<%= current_user.id %>
+<h1>render headder bar partial (to be built later)</h1>
 
-<% if current_user == @user %>
-edit stuff
-<% else %>
-view only
-<% end %>
+<%= link_to "New Project", new_company_project_path %>
